--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,35 @@
+/* Created by: Caleb
+* Created on: Sep 2022
+* This file contains the CSS for index.html
+*/
+
+.mdl-layout__content {
+padding-left: 30pt;
+padding-right: 15pt;
+padding-top: 15pt;
+}
+
+/* Due to error in MDL : https://github.com/google/material-design-lite/issues/5281
+*/
+.mdl-ripple {
+background: whitesmoke;
+opacity: 0.001;
+}
+ background-color: whitesmoke;
+}
+p {
+color: blue;
+font-family: Helvetica, Arial, sans-serif;
+font-size: 9.5rem;
+padding-top: 10pt;
+  }
+#divID cite {
+    font-style: italic;
+    font-weight: bold;
+    font-size: large;
+    color: red;
+    background-color: #ddd;
+    }
 html, body {
   height: 100%;
   width: 100%;
